--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 4
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 4,
+    "printWidth": 80
 }
